--- a/SonicCoderMod/mod.ini
+++ b/SonicCoderMod/mod.ini
@@ -7,7 +7,7 @@ Author="Sonic Coder"
 AuthorURL="https://youtube.com/c/sonicthehedgehogcoder"
 
 [Main]
-UpdateServer="https://gamebanana.com/mods/420134"
+UpdateServer="https://raw.githubusercontent.com/SonicCoder/SonicCoderMod/main/SonicCoderMod"
 SaveFile=""
 ID="635ED71F"
 IncludeDir0="."
